# dyros_pcv_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: Copy_of_check_odom.m  check_odom.m  global_op_space_plot.m  local_op_space_plot.m  op_plot.m
data/odom_maker/: joint_2022_04_14_12.csv  joint_2022_04_14_3.csv  joint_2022_04_14_8.csv  joint_2022_04_14_9.csv  joint_debug_2022_04_08_6.txt  joint_debug_2022_04_08_7.txt  joint_debug_2022_04_14_1.txt  joint_debug_2022_04_14_10.txt  joint_debug_2022_04_14_11.txt  joint_debug_2022_04_14_12.txt  joint_debug_2022_04_14_3.txt  joint_debug_2022_04_14_4.txt  joint_debug_2022_04_14_5.txt  joint_debug_2022_04_14_6.txt  joint_debug_2022_04_14_7.txt  joint_debug_2022_04_14_8.txt  joint_debug_2022_04_14_9.txt  joint_vel_2022_04_14_1.csv  joint_vel_2022_04_14_10.csv  joint_vel_2022_04_14_11.csv  joint_vel_2022_04_14_12.csv  joint_vel_2022_04_14_3.csv  joint_vel_2022_04_14_4.csv  joint_vel_2022_04_14_5.csv  joint_vel_2022_04_14_6.csv  joint_vel_2022_04_14_8.csv  joint_vel_2022_04_14_9.csv  mocap_3.txt
data/odom_maker/backup/: joint_debug_2022_04_08_8.txt  (+9 more)
include/: caster.h  filter.h  math_type_define.h  mobile_controller.h  pcv_mtx_utils.h  ros_node.h  vehicle.h
matlab/: debug.m  joint_plot.m  low_pass_filter.m  op_plot.m
save_data/: pcv_fd.txt  pcv_fd_star.txt  pcv_qd.txt  pcv_xd_dot.txt
script/: gain_tuner.py
setting/: basic_setting.txt  odom_setting.yaml  pcv_parameter.yaml  setting.yaml  targets.yaml
src/: caster.cpp  filter.cpp  main.cpp  mobile_controller.cpp  odom_maker.cpp  ros_node.cpp  vehicle.cpp
(+18 files in other folders)
